--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "ejs": "^3.1.10",
     "express": "^5.2.1",
     "method-override": "^3.0.0",
+    "mongoose": "^9.1.1",
     "uuid": "^13.0.0"
   }
 }
